--- a/index.html
+++ b/index.html
@@ -163,9 +163,10 @@
     <aside>
         <div class="card">
             <h2 class="heading-2">Profile Pribadi</h2>
-
-            <img src="./assets/images/developer_outline I.svg" alt="Profile">
-            <h5>Mutakin</h5>
+            <div class="profile-image">
+                <img src="./assets/images/profile-no-bg.png" alt="Profile">
+            </div>
+            <h4>Mutakin</h4>
             <img src="./assets/images/tanda tangan.png" alt="Tanda tangan" class="tanda-tangan">
         </div>
     </aside>
